--- a/Metodologia de Sistemas l 2023/Java Avanzado/tienda_libros/tienda_libros/src/main/java/utn/tienda_libros/vista/LibroFrom.form
+++ b/Metodologia de Sistemas l 2023/Java Avanzado/tienda_libros/tienda_libros/src/main/java/utn/tienda_libros/vista/LibroFrom.form
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="utn.tienda_libros.vista.LibroFrom">
-  <grid id="27dc6" binding="panel" custom-create="true" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
+  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="483" height="479"/>
     </constraints>
-    <properties>
-      <background color="-8418187"/>
-      <foreground color="-10531949"/>
-    </properties>
-    <border type="bevel-lowered" title-justification="2">
-      <font/>
-      <title-color color="-10531949"/>
-    </border>
+    <properties/>
+    <border type="none"/>
     <children>
-      <vspacer id="8962d">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <component id="1d57b" class="javax.swing.JLabel">
+      <component id="309f1" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Arial" size="36" style="1"/>
-          <text value="TIENDA DE LIBROS"/>
+          <font size="28" style="1"/>
+          <text value="Tienda de Libros"/>
         </properties>
       </component>
+      <scrollpane id="96df">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="a46a0" class="javax.swing.JTable" binding="tablaLibros">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
